tests/parser_cases/invalid/bad_const_decl.ob0
(* INVALID: CONST declaration misses '=' between name and literal *)
MODULE Main;
CONST answer 42;
BEGIN
END Main.
